# makya-api-sa-score

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  serve-sascore.py
src/controllers/: sa_score_controller.py
src/use_cases/: compute_sa_score.py
